--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				location.href = "http://www.devmedia.com.br";
 			}
 			else{
-				alert('Usuario e/ou Senha errado!');
+				alert('Usuario e/ou Senha inválido!');
 			}
 		}
 		
